If the PDC_MODEL_CPUID call fails use cpu_hvers to work out cpu_type.

Fixes PR/41379.